<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Tobias Raatiniemi
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 2 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="name">Worker</string>

    <!--<editor-fold desc="Home">-->
    <string name="home_navigation_projects">Projects</string>
    <string name="home_navigation_settings">Settings</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Projects">-->
    <string name="projects_all_menu_create_project">Create project</string>
    <string name="projects_all_project_created_message">New project have been created</string>

    <string name="projects_all_empty_text">You haven\'t created\na project yet…</string>

    <string name="projects_all_clock_in">Clock in %s</string>
    <string name="projects_all_clock_in_at">Clock in %s at</string>

    <string name="projects_all_unable_to_clock_in_message">Failed to clock in project.</string>

    <string name="projects_all_clock_out">Clock out %s</string>
    <string name="projects_all_clock_out_at">Clock out %s at</string>

    <string name="projects_all_confirm_clock_out_title">You are about to clock out</string>
    <string name="projects_all_confirm_clock_out_message">Are you sure you\'d like to clock out?</string>

    <string name="projects_all_unable_to_clock_out_message">Failed to clock out project.</string>

    <string name="projects_all_elapsed_time_past_allowed_title">Unable to clock out</string>
    <string name="projects_all_elapsed_time_past_allowed_message">The elapsed time is past the maximum allowed time of 24 hours.</string>

    <string name="projects_all_delete">Delete %s</string>

    <string name="projects_all_confirm_delete_project_title">Delete project</string>
    <string name="projects_all_confirm_delete_project_message">Are you sure you want to delete the project?\n\nThis action cannot be undone!</string>

    <string name="projects_all_unable_to_delete_message">Failed to delete project.</string>

    <string name="projects_all_clocked_in_since" formatted="false">Since %s (%s)</string>

    <string name="projects_create_title">Create project</string>
    <string name="projects_create_description">Enter the name of the project you\'d wish to create. Note, the name have to be unique.</string>
    <string name="projects_create_name_hint">What\'s the name of your project?</string>

    <string name="projects_create_submit">Create</string>
    <string name="projects_create_dismiss">Cancel</string>

    <string name="projects_create_missing_name_error_message">You have to supply a name</string>
    <string name="projects_create_project_already_exists_error_message">Project name already exists</string>
    <string name="projects_create_unknown_error_message">An unknown error has occurred</string>

    <string name="projects_time_report_menu_hide_registered">Hide registered</string>
    <string name="projects_time_report_empty_text">No time report entries\nwas found…</string>

    <string name="projects_time_report_menu_title">Actions</string>
    <string name="projects_time_report_menu_register">Mark as registered</string>
    <string name="projects_time_report_menu_delete">Delete</string>

    <string name="projects_time_report_week">Week %s</string>

    <string name="projects_time_report_group_selection_content_description">Select or deselect item group</string>

    <string name="projects_time_report_unable_to_register_message">Failed to update item(s).</string>

    <string name="projects_time_report_unable_to_delete_message">Failed to delete item(s).</string>

    <string name="projects_time_report_unable_to_mark_active_items_as_registered_title">Action is not allowed</string>
    <string name="projects_time_report_unable_to_mark_active_items_as_registered_message">Mark as registered with active time interval(s) selected is not allowed.\n\nClock out and try again.</string>

    <string name="projects_time_report_confirm_delete_title">Delete time</string>
    <string name="projects_time_report_confirm_delete_message">Are you sure you want to delete the registered time?</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Settings">-->
    <string name="settings_project_title">Project</string>

    <string name="settings_confirm_clock_out_title">Confirm clock out</string>
    <string name="settings_confirm_clock_out_summary">Require confirmation when clocking out to prevent accidental clocking out. Clock out from ongoing notification is not yet supported.</string>

    <string name="settings_time_summary_title">Time summary</string>
    <string name="settings_time_summary_summary">Starting point for the collection of registered time used for the time summary.</string>
    <string name="settings_time_summary_starting_point_week">Week</string>
    <string name="settings_time_summary_starting_point_month">Month</string>

    <string name="settings_time_summary_changed_starting_point_to_week_message">Time summary will show current week</string>
    <string name="settings_time_summary_changed_starting_point_to_month_message">Time summary will show current month</string>
    <string name="settings_time_summary_unable_to_change_starting_point_message">Unable to change time summary starting point.</string>

    <string name="settings_ongoing_notification_title">Ongoing notification</string>

    <string name="settings_ongoing_notification_enabled_title">Enable</string>
    <string name="settings_ongoing_notification_enabled_summary">For devices running Android Oreo (8.0) or later, notifications can also be enabled/disabled through the appropriate notification channel.\n\nToggling this preference do not affect the notification channel state.</string>

    <string name="settings_ongoing_notification_chronometer_enabled_title">Notification timer</string>
    <string name="settings_ongoing_notification_chronometer_enabled_summary">Include notification timer for total time worked today, or length of current break (depends on project state).</string>

    <string name="settings_about_title">About</string>

    <string name="settings_version_title">Version</string>
    <string name="settings_version_summary" formatted="false">%s (%d)</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Ongoing notification">-->
    <string name="ongoing_notification_channel_title">Ongoing</string>
    <string name="ongoing_notification_channel_description">Shows while a project is either active or paused.</string>

    <string name="ongoing_notification_action_pause">Pause</string>
    <string name="ongoing_notification_action_clock_out">Clock out</string>
    <string name="ongoing_notification_action_resume">Resume</string>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Date time picker">-->
    <string name="date_time_picker_date_title">Date</string>
    <string name="date_time_picker_time_title">Time</string>

    <string name="date_time_picker_date_is_before_allowed_title">Date is not allowed</string>
    <string name="date_time_picker_date_is_before_allowed_message">The chosen date is before the minimum allowed date.</string>

    <string name="date_time_picker_date_is_after_allowed_title">Date is not allowed</string>
    <string name="date_time_picker_date_is_after_allowed_message">The chosen date is after the maximum allowed date.</string>

    <string name="date_time_picker_time_is_before_allowed_title">Time is not allowed</string>
    <string name="date_time_picker_time_is_before_allowed_message">The chosen time is before the minimum allowed time.</string>

    <string name="date_time_picker_time_is_after_allowed_title">Time is not allowed</string>
    <string name="date_time_picker_time_is_after_allowed_message">The chosen time is after the maximum allowed time.</string>
    <!--</editor-fold>-->

</resources>
