<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/settings_project_title">

        <androidx.preference.CheckBoxPreference
            android:key="confirm_clock_out"
            android:summary="@string/settings_confirm_clock_out_summary"
            android:title="@string/settings_confirm_clock_out_title" />

        <androidx.preference.ListPreference
            android:entries="@array/settings_time_summary_alternative_text"
            android:entryValues="@array/settings_time_summary_alternative_value"
            android:key="time_summary"
            android:summary="@string/settings_time_summary_summary"
            android:title="@string/settings_time_summary_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/settings_ongoing_notification_title">

        <androidx.preference.CheckBoxPreference
            android:key="ongoing_notification_enabled"
            android:title="@string/settings_ongoing_notification_enabled_title" />

        <androidx.preference.CheckBoxPreference
            android:key="ongoing_notification_chronometer_enabled"
            android:summary="@string/settings_ongoing_notification_chronometer_enabled_summary"
            android:title="@string/settings_ongoing_notification_chronometer_enabled_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/settings_about_title">

        <Preference
            android:key="version"
            android:title="@string/settings_version_title" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
