<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Tobias Raatiniemi
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 2 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/fragment_dialog_padding_horizontal"
    android:paddingTop="@dimen/fragment_dialog_padding_vertical"
    android:paddingEnd="@dimen/fragment_dialog_padding_horizontal"
    android:paddingBottom="@dimen/fragment_dialog_padding_vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projects_create_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProjectName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@id/tvDescription">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etProjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:hint="@string/projects_create_name_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/fragment_dialog_text_size">

            <requestFocus />

        </androidx.appcompat.widget.AppCompatEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDismiss"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/btnCreate"
        android:text="@string/projects_create_dismiss"
        android:textColor="@drawable/button_foreground"
        app:layout_constraintEnd_toStartOf="@id/btnCreate"
        app:layout_constraintTop_toTopOf="@id/btnCreate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreate"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/projects_create_submit"
        android:textColor="@drawable/button_foreground"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/tilProjectName"
        app:layout_constraintTop_toBottomOf="@id/tilProjectName" />

</androidx.constraintlayout.widget.ConstraintLayout>
