<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Tobias Raatiniemi
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 2 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ivDivider"
            tools:text="@sample/projects.json/data/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTimeSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:textColor="@color/color_on_surface_secondary"
            app:layout_constraintBottom_toBottomOf="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tvName"
            app:layout_constraintTop_toTopOf="@id/tvName"
            tools:text="@sample/projects.json/data/time_summary" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/projects_item_toolbar_divider"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintBottom_toTopOf="@id/ibClockActivityToggle" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibClockActivityToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/projects_item_action_ripple_background"
            android:contentDescription="@string/projects_all_clock_in"
            android:padding="8dp"
            android:src="@drawable/projects_item_action_clock_activity_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDivider" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibClockActivityAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/projects_all_clock_in_at"
            android:padding="8dp"
            android:src="@drawable/projects_item_action_clock_activity_at"
            app:layout_constraintBottom_toBottomOf="@id/ibClockActivityToggle"
            app:layout_constraintStart_toEndOf="@id/ibClockActivityToggle"
            app:layout_constraintTop_toTopOf="@id/ibClockActivityToggle" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="6dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/projects_all_delete"
            android:padding="8dp"
            android:src="@drawable/projects_item_action_delete"
            app:layout_constraintBottom_toBottomOf="@id/ibClockActivityToggle"
            app:layout_constraintStart_toEndOf="@id/ibClockActivityAt"
            app:layout_constraintTop_toTopOf="@id/ibClockActivityToggle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvClockedInSince"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:gravity="end|center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/color_on_surface_secondary"
            app:layout_constraintBottom_toBottomOf="@id/ibClockActivityToggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ibDelete"
            app:layout_constraintTop_toTopOf="@id/ibClockActivityToggle"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@sample/projects.json/data/clocked_in_since" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
